force-app/main/default/objects/HandsMen_Product__c/HandsMen_Product__c.object-meta.xml
<CustomObject>
    <label>HandsMen Product</label>
    <nameField>
        <label>HandsMen Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>HandsMen Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>