force-app/main/default/objects/HandsMen_Product__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order</label>
    <referenceTo>HandsMen_Order__c</referenceTo>
    <relationshipLabel>HandsMen Products</relationshipLabel>
    <relationshipName>HandsMen_Products</relationshipName>
    <type>Lookup</type>
</CustomField>